force-app/main/default/objects/CSVReportField__c/CSVReportField__c.object-meta.xml
<CustomObject>
    <label>CSV Report Field</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSV Report Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>