force-app/main/default/objects/CSVReportField__c/fields/Aggregation__c.field-meta.xml
<CustomField>
    <fullName>Aggregation__c</fullName>
    <label>Aggregation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GROUP BY</fullName>
                <default>true</default>
                <label>GROUP BY</label>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>COUNT_DISTINCT</fullName>
            </value>
            <value>
                <fullName>AVG</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>