force-app/main/default/objects/CSVReportField__c/fields/CSVReport__c.field-meta.xml
<CustomField>
    <fullName>CSVReport__c</fullName>
    <label>CSV Report</label>
    <referenceTo>CSVReport__c</referenceTo>
    <relationshipLabel>CSV Report Fields</relationshipLabel>
    <relationshipName>CSV_Report_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>