force-app/main/default/objects/CSVReportField__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <label>CSV Column Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>