force-app/main/default/objects/CSVReportField__c/fields/IsDate__c.field-meta.xml
<CustomField>
    <fullName>IsDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Date Field</label>
    <type>Checkbox</type>
</CustomField>