force-app/main/default/objects/CSVReportField__c/fields/IsInteger__c.field-meta.xml
<CustomField>
    <fullName>IsInteger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display as Integer</label>
    <type>Checkbox</type>
</CustomField>